--- a/ife html task02.html
+++ b/ife html task02.html
@@ -64,6 +64,13 @@ word-break: normal;
 	line-height: 20px;
 	width: 100%;
 }
+th{
+	background-color: black;
+	color: white;
+}
+#tdb{
+	background-color: grey;
+}
 </style>
     <meta charset="utf-8">
 </head>
@@ -169,7 +176,7 @@ word-break: normal;
          <td>content</td>
          </tr>
          <tr>
-         <td>content</td>
+         <td id="tdb">content</td>
          <td colspan="2">content</td>
          </tr></table>
  
