--- a/ife html task02.html
+++ b/ife html task02.html
@@ -46,7 +46,7 @@ main{
 	margin-bottom: 1.5em;
 }
 form{
-	text-align: center;
+	margin-left:20%;
 }
 p{
 	text-indent: 2em;
@@ -70,6 +70,11 @@ th{
 }
 #tdb{
 	background-color: grey;
+}
+label{
+	display: inline-block;
+	text-align: right;
+	width: 30%;
 }
 </style>
     <meta charset="utf-8">
@@ -200,22 +205,22 @@ th{
 
  
 
- gender
+ <label>gender</label>
  <input type="radio" name="gender">man
  <input type="radio" name="gender">woman
 <br>
- city
+ <label>city</label>
  <select name="city">
      <option>shanghai</option>
      <option>beijing</option>
      <option>suzhou</option>
  </select>
- <br>
+ <br><label>hobby</label>
  <input type="checkbox">badminton &nbsp;
  <input type="checkbox">archery &nbsp;
  <input type="checkbox">skating &nbsp;
  <input type="checkbox">basket &nbsp;
- <br>
+ <br><label>opinion</label>
  <textarea >sdfsd</textarea>
  <br>
  <input type="submit" name="sumbit" class="button">
