--- a/ife html task02.html
+++ b/ife html task02.html
@@ -222,11 +222,11 @@ label{
  <input type="checkbox">basket &nbsp;
  <br><label>opinion</label>
  <textarea >sdfsd</textarea>
- <br>
+ <br> </form>
  <input type="submit" name="sumbit" class="button">
  
 
- </form>
+
  </div>
     </div>
     </main>
