Update ife html task06.html

--- a/task01/ife html task06.html
+++ b/task01/ife html task06.html
@@ -26,7 +26,7 @@
            <div class="navbutton"><p>首页</p></div>
        </li>
       </ul>
-      <img src="newworld.png" width="100px" height="50px">
+      <img src="newworld.PNG" width="100px" height="50px">
     </header>
     <div id="first">
      
@@ -38,10 +38,10 @@
       
     </div>
     <div id="second">
-       <img src="1.png" >
-       <img src="2.png" >
-       <img src="3.png" >
-       <img src="4.png" >
+       <img src="1.PNG" >
+       <img src="2.PNG" >
+       <img src="3.PNG" >
+       <img src="4.PNG" >
        <br>
         <div class="float">
           完善的培养机制，培养你全新的世界观
@@ -58,7 +58,7 @@
         <div id="kongbai"> </div>
     </div>
     <div id="third">
-    <img src="whatyouknow.png"><br>
+    <img src="whatyouknow.PNG"><br>
     关于新世界，你不知道的还有什么
     <br>&nbsp;
     </div>
@@ -84,22 +84,22 @@
     </div>
     <div id="fifth">
        <div class="pic">
-       <img src="beijing.png">
+       <img src="beijing.PNG">
         <br>北京活动
        <p>社区大联盟</p>
        </div> 
        <div class="pic">
        &nbsp;上&nbsp;海&nbsp;活&nbsp;动<br>
        <p>夜上海新景观</p>
-       <img src="上海.png">
+       <img src="上海.PNG">
        </div> 
        <div class="pic">
-       <img src="深圳.png">
+       <img src="深圳.PNG">
         <br>深圳活动
        <p>全新海岸线观点站</p>
        </div> 
        <div class="pic">
-       <img src="香港.png">
+       <img src="香港.PNG">
         <br>香港活动
        <p>奢侈消费大派送</p>
        </div> 
