--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <meta charset="utf-8">
 <head>
+	<link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
 <style type="text/css">
 *{background-color: #3366FF;
   margin-left: 5%;
@@ -30,6 +31,7 @@ div p{margin-left: 0;}
 	<title>运动休闲</title>
 </head>
 <body>
+	<div class="container-fluid">
   <header>
     <img src="header.PNG">
     运动休闲<br>
@@ -60,7 +62,7 @@ div p{margin-left: 0;}
 	   票价：60元/小时</p>
 </div>
 
-
+	</div>
 
 </body>
 </html>
