--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@ div p{margin-left: 0;}
 /*article{width:40%;
 	height: 30px;
 
-	}*/#ball{float:left;}
-	div{width:190px;}
+	}*/#ball{float:left;width:190px;;}
+	
 	.head{font-size: 1.3em;
 	      color: white;}
 </style>
