--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@ div p{margin-left: 0;}
 /*article{width:40%;
 	height: 30px;
 
-	}*/#ball{float:left;width:190px;;}
+	}*/#ball{float:left;width:190px;}
 	
 	.head{font-size: 1.3em;
 	      color: white;}
 </style>
 	<title>运动休闲</title>
 </head>
-<body>
-	<div class="container-fluid">
+<body class="container-fluid">
+	
   <header>
     <img src="header.PNG">
     运动休闲<br>
@@ -61,7 +61,7 @@ div p{margin-left: 0;}
 	   票价：60元/小时</p>
 </div>
 
-	</div>
+
 
 </body>
 </html>
