--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ div p{margin-left: 0;}
 /*article{width:40%;
 	height: 30px;
 
-	}*/#ball{float:left;width:190px;}
+	}*/#ball{float:left;}
 	
 	.head{font-size: 1.3em;
 	      color: white;}
