--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ div p{margin-left: 0;}
 </style>
 	<title>运动休闲</title>
 </head>
-<body class="container-fluid">
+<body >
 	
   <header>
     <img src="header.PNG">
