--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
 <style type="text/css">
-*{background-color: #3366FF;
+body{background-color: #3366FF;
  }
 img{margin-left: 0;
 margin-right: 0;}
