--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ div p{margin-left: 0;}
 </style>
 	<title>运动休闲</title>
 </head>
-<body class="container-fluid">
-	
+<body >
+<div class="container-fluid">	
   <header>
     <img src="header.PNG">
     运动休闲<br>
@@ -61,7 +61,7 @@ div p{margin-left: 0;}
 	   票价：60元/小时</p>
 </div>
 
-
+	</div>
 
 </body>
 </html>
