--- a/index.html
+++ b/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<!--bootstrap根据手机屏幕适配-->
 <head>
-	<link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
+	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
+	<!--链接bootstrap-->
 <style type="text/css">
-body{background-color: #3366FF;
- }
-img{margin-left: 0;
-margin-right: 0;}
-header{color: #FFCC33;
-       font-size:2em;}
+   body{background-color: #6495ED;
+	font-family:arial;}
+   img{margin-left: 0;
+       margin-right: 0;}
+   header{color: #FFCC33;
+          font-size:2em;}
        header p{color: white;
                 font-size: 0.5em;
                 margin-top: -5px;
                 margin-left: 0px;}
        header img{float:left;}
-
-p b{margin-left: 0;
+   p b{margin-left: 0;
     margin-right: 0;}
-div p{margin-left: 0;}
+   div p{margin-left: 0;}
 /*article{width:40%;
 	height: 30px;
-
-	}*/#ball{float:left;}
+	}*/
+	#ball{float:left;}
 	
 	.head{font-size: 1.3em;
 	      color: white;}
@@ -36,18 +37,19 @@ div p{margin-left: 0;}
     <img src="header.PNG">
     运动休闲<br>
     <p>SPORTS AND LEISURE</p>
-    
-  </header>
-<p class="head" style="background-color: #B0C4DE"><b>员工福利<b></br></p>
-<p>公司将公司将资助员工俱乐部，定期举办集团活动每周安排美容
-美发,按摩等上门服务，缓解工作压力，营造一个身心舒畅
-的工作环境。</p>
-<p>同时还将以公司的名义，与附近的休闲娱乐场所洽谈，为员工争取更过优惠，谋取更多便利。</p>
+   </header>
+<p class="head" style="background-color: #B0C4DE"><b>员工福利</b></br></p>
+   <p style="color: white;">公司将公司将资助员工俱乐部，定期举办集团活动每周安排美容
+   美发,按摩等上门服务，缓解工作压力，营造一个身心舒畅
+   的工作环境.
+   </p>
+   <p style="color: white">同时还将以公司的名义，与附近的休闲娱乐场所洽谈，为员工争取更过优惠，谋取更多便利。</p>
 
-<p class="head"><b>东方体育中心</b></p>
+<p class="head"> <b>东方体育中心</b></p>
+<br>
 
 <div id="ball" style="color: #FFCC33" >
-	室内游泳池
+	<b>室内游泳池</b>
 	<p style="color: white">规格:20m*50m<br>
 	   开发时间：全年<br>
 	   9：00-21：00<br>
@@ -55,14 +57,84 @@ div p{margin-left: 0;}
 </div>
 
 <div  id="ball" style="color: #FFCC33">
-	室内羽毛球场
+	<b>室内羽毛球场</b>
 	<p style="color: white">规格:15m*7.1m<br>
-	   10片场地
+	   10片场地<br>
 	   开发时间：9：00-22：00<br>
 	   票价：60元/小时</p>
 </div>
 
-	</div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
+<div id="ball" style="color: #FFCC33" >
+	<b>室内篮球场</b>
+	<p style="color: white">
+	  规格：26m*15m;<br>
+      4片场地<br>
+      开放时间：13：00-21：00<br>
+      票价：10元/人</p>
+</div>
+
+<div  id="ball" style="color: #FFCC33">
+	<b>室外足球场</b>
+	<div style="color: white">
+	   规格：7*7 &11&11<br>
+场地各两片<br>
+开放时间：13：00-21：00<br>
+票价：10元/人/小时<br><br></div> 
+</div>
+<br>
+
+<div style="float:left;">
+<p class="head"> <b>V+ FITNESS CENTER</b></p>
+<p style="color: white;">位于公司楼下一层，约200平米，配有5名私人教练6种经典课程：新手入门，美背塑胸，美腿翘臀，全身塑燃，核心紧致，超能燃脂更有瑜伽，普拉提，boxing等特色课程</p>
+<p class="head"> <b>其他周边场地信息</b></p>
+</div>
+   <div id="ball" style="color: #FFCC33" >
+	<b>室内篮球场</b>
+	<p style="color: white">
+	  规格：26m*15m;<br>
+      4片场地<br>
+      开放时间：13：00-21：00<br>
+      票价：10元/人</p>
+</div>
+
+<div id="ball" style="color: #FFCC33" >
+	<b>室内篮球场</b>
+	<p style="color: white">
+	  规格：26m*15m;<br>
+      4片场地<br>
+      开放时间：13：00-21：00<br>
+      票价：10元/人</p>
+</div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<div id="ball" style="color: #FFCC33" >
+	<b>室内篮球场</b>
+	<p style="color: white">
+	  规格：26m*15m;<br>
+      4片场地<br>
+      开放时间：13：00-21：00<br>
+      票价：10元/人</p>
+</div>
+<div id="ball" style="color: #FFCC33" >
+	<b>室内篮球场</b>
+	<p style="color: white">
+	  规格：26m*15m;<br>
+      4片场地<br>
+      开放时间：13：00-21：00<br>
+      票价：10元/人</p>
+</div>
+	
+</div>
 </body>
 </html>
