--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
 	
 	.head{font-size: 1.3em;
 	      color: white;}
+    hr{
+    margin-top: 8px;
+    margin-bottom: 4px;
+    border: 0;
+    border-top: 1px solid white;
+    }
 </style>
 	<title>运动休闲</title>
 </head>
@@ -104,8 +110,8 @@
       票价：10元/人</p>
 </div>
 
-<div id="ball" style="color: #FFCC33" >
-	<b>室内篮球场</b>
+<div id="ball"  >
+	<b style="color: #FFCC33">室内篮球场</b>
 	<p style="color: white">
 	  规格：26m*15m;<br>
       4片场地<br>
@@ -118,21 +124,28 @@
 <br>
 <br>
 <br>
-<div id="ball" style="color: #FFCC33" >
-	<b>室内篮球场</b>
+<div id="ball" " >
+	<b style="color: #FFCC33;">篮球馆</b>
+	<hr>
 	<p style="color: white">
-	  规格：26m*15m;<br>
-      4片场地<br>
-      开放时间：13：00-21：00<br>
-      票价：10元/人</p>
+	  米高篮球俱乐部<br>
+      下南路900号<br>
+      距离新家：7.3km<br><br>
+
+      世博洛克公园<br>
+      世博大道1368号<br>
+      距新家距离：4.3km</p>
 </div>
-<div id="ball" style="color: #FFCC33" >
-	<b>室内篮球场</b>
+<div id="ball" style="color: #FFCC33;" >
+	<b>羽毛球球场</b>
+	<hr style="color: #FFCC33;">
 	<p style="color: white">
-	  规格：26m*15m;<br>
-      4片场地<br>
-      开放时间：13：00-21：00<br>
-      票价：10元/人</p>
+	  群星职校羽毛球馆<br>
+      通州路240号<br>
+      距离新家：2.6km<br><br>
+      博宽羽毛球馆<br>
+      浦东新区杨思路1371号<br>
+      距离新家：3.2km</p>
 </div>
 	
 </div>
