--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
    </header>
 <p class="head" style="background-color: #B0C4DE"><b>员工福利</b></br></p>
    <p style="color: white;">公司将公司将资助员工俱乐部，定期举办集团活动每周安排美容
-   美发,按摩等上门服务，缓解工作压力，营造一个身心舒畅<a href="tel:18217633690">18217633690</a>
+   美发,按摩等上门服务，缓解工作压力，营造一个身心舒畅
    的工作环境.
    </p>
+	<p><a href="tel:18217633690">18217633690</a></p>
    <p style="color: white">同时还将以公司的名义，与附近的休闲娱乐场所洽谈，为员工争取更过优惠，谋取更多便利。</p>
 
 <p class="head"> <b>东方体育中心</b></p>
