--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
    美发,按摩等上门服务，缓解工作压力，营造一个身心舒畅
    的工作环境.
    </p><a style="color: white" href="tel:18217633690">18217633690</a>
-	<p><a style="color:white;" href="tel:18217633690">18217633690</a></p>
+	<p><a style="color:white;" href="wtai://wp/mc;18217633690">18217633690</a></p>
    <p style="color: white">同时还将以公司的名义，与附近的休闲娱乐场所洽谈，为员工争取更过优惠，谋取更多便利。</p>
 
 <p class="head"> <b>东方体育中心</b></p>
