--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 	height: 30px;
 	}*/
 	#ball{float:left;}
+	#ball1{
+		margin-right: -10;
+		margin-left: -10;
+	}
 	
 	.head{font-size: 1.3em;
 	      color: white;}
@@ -48,8 +52,7 @@
    <p style="color: white;">公司将公司将资助员工俱乐部，定期举办集团活动每周安排美容
    美发,按摩等上门服务，缓解工作压力，营造一个身心舒畅
    的工作环境.
-   </p><a style="color: white" href="tel:18217633690">18217633690</a>
-	<p><a style="color:white;" href="wtai://wp/mc;18217633690">18217633690</a></p>
+   </p>
    <p style="color: white">同时还将以公司的名义，与附近的休闲娱乐场所洽谈，为员工争取更过优惠，谋取更多便利。</p>
 
 <p class="head"> <b>东方体育中心</b></p>
@@ -78,7 +81,7 @@
 <br>
 <br>
 
-<div id="ball" style="color: #FFCC33" >
+<div  style="color: #FFCC33" >
 	<b>室内篮球场</b>
 	<p style="color: white">
 	  规格：26m*15m;<br>
@@ -96,10 +99,18 @@
 票价：10元/人/小时<br><br></div> 
 </div>
 <br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
-<div style="float:left;">
+<br>
+<br>
+<div >
 <p class="head"> <b>V+ FITNESS CENTER</b></p>
 <p style="color: white;">位于公司楼下一层，约200平米，配有5名私人教练6种经典课程：新手入门，美背塑胸，美腿翘臀，全身塑燃，核心紧致，超能燃脂更有瑜伽，普拉提，boxing等特色课程</p>
+
 <p class="head"> <b>其他周边场地信息</b></p>
 </div>
    <div id="ball" style="color: #FFCC33" >
@@ -137,7 +148,7 @@
       世博大道1368号<br>
       距新家距离：4.3km</p>
 </div>
-<div id="ball" style="color: #FFCC33;" >
+<div id="ball1" style="color: #FFCC33; " >
 	<b>羽毛球球场</b>
 	<hr style="color: #FFCC33;">
 	<p style="color: white">
@@ -148,7 +159,11 @@
       浦东新区杨思路1371号<br>
       距离新家：3.2km</p>
 </div>
-	
+	<a style="color: white" href="tel:18217633690">18217633690</a>
+	<div id="sign" style="float:right">
+	<p style="color:white">Medtronic<br>
+	&nbsp;美&nbsp;敦&nbsp;力</p>
+	</div>
 </div>
 </body>
 </html>
