--- a/zixun.html
+++ b/zixun.html
@@ -31,13 +31,13 @@
 	}
 	
 	.head{font-size: 1.3em;
-	      background-color: #6a5acd; border-radius:25px;
+	      background-color: #000099; border-radius:25px;
 	      color: white;}
     hr{
     margin-top: -1px;
     margin-bottom: 5px;
     border: 0;
-    border-top: 1px solid #6a5acd;
+    border-top: 1px solid #000099;
     }
 </style>
 	<title>咨询</title>
@@ -57,7 +57,7 @@
    </p>
    <p style="color: white">同时还将以公司的名义，与附近的休闲娱乐场所洽谈，为员工争取更过优惠，谋取更多便利。</p>
 
-<p class="head" ><b>&nbsp;&nbsp;大楼前台</b></br></p>
+<p class="head" ><b>&nbsp;&nbsp;大楼保安中心</b></br></p>
 <p class="head" ><b>&nbsp;&nbsp;公司快递收发须知</b></br></p>
 <p class="head" ><b>&nbsp;&nbsp;公司IT咨询须知</b></br></p>
 
