--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	font-family:arial;}
    img{margin-left: 0;
        margin-right: 0;}
-   header{color: #FFCC33;
+   header{color: #330099;
           font-size:2em;}
-       header p{color: white;
+       header p{
                 font-size: 0.5em;
                 margin-top: -5px;
                 margin-left: 0px;}
@@ -24,121 +24,115 @@
 /*article{width:40%;
 	height: 30px;
 	}*/
-	#ball{float:left;}
+	#ball{float:left;
+	color: #330099;
+    margin-right: 20px;}
+
 	#ball1{
 		margin-right: -10;
 		margin-left: -10;
 	}
 	
 	.head{font-size: 1.3em;
-	      color: white;}
+	      color: #330099;}
     hr{
-    margin-top: 8px;
-    margin-bottom: 4px;
+    margin-top: -1px;
+    margin-bottom: 5px;
     border: 0;
-    border-top: 1px solid white;
+    border-top: 1px solid #000099;
     }
 </style>
-	<title>运动休闲</title>
+	<title>娱乐</title>
 </head>
 <body >
 <div class="container-fluid">	
   <header>
     <img src="header.PNG">
-    运动休闲<br>
-    <p>SPORTS AND LEISURE</p>
+    &nbsp;&nbsp;娱乐<br>
+    <hr>
+    <p>ENTERTAINMENT</p>
    </header>
-<p class="head" style="background-color: #B0C4DE"><b>员工福利</b></br></p>
+<p class="head" style="color: green;"><b>定期举办员工俱乐部活动</b></br></p>
    <p style="color: white;">公司将公司将资助员工俱乐部，定期举办集团活动每周安排美容
    美发,按摩等上门服务，缓解工作压力，营造一个身心舒畅
    的工作环境.
    </p>
    <p style="color: white">同时还将以公司的名义，与附近的休闲娱乐场所洽谈，为员工争取更过优惠，谋取更多便利。</p>
 
-<p class="head"> <b>东方体育中心</b></p>
-<br>
+<p class="head" style="color: #ffa500;"><b>运动补贴</b></br></p>
 
-<div id="ball" style="color: #FFCC33" >
-	<b>室内游泳池</b>
+<p class="head" style="color: #330099;"><b>每周定期的健康日</b></br></p>
+
+
+
+
+<p class="head"> <b>东方体育中心</b></p>
+<hr>
+<div id="ball" " >
+	<p style="padding-bottom: 0.7px; border-bottom: 1px solid; font-size: 1.3em; ">室内游泳池&nbsp;</p>
 	<p style="color: white">规格:20m*50m<br>
-	   开发时间：全年<br>
+	   一片场地<br>开发时间：全年<br>
 	   9：00-21：00<br>
 	   票价：60元/3小时</p>
 </div>
 
-<div  id="ball" style="color: #FFCC33">
-	<b>室内羽毛球场</b>
+<div  id="ball" style="float: none; " >
+	<p style="padding-bottom: 1.7px;  font-size: 1.3em">室内羽毛球场&nbsp;</p>
 	<p style="color: white">规格:15m*7.1m<br>
 	   10片场地<br>
-	   开发时间：9：00-22：00<br>
+	   开发时间：<br>9：00-22：00<br>
 	   票价：60元/小时</p>
 </div>
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 
-<div  style="color: #FFCC33" >
-	<b>室内篮球场</b>
+
+<div   id="ball"  >
+	<p style=" font-size: 1.3em; padding-bottom: 0.7px; border-bottom: 1px solid ;">室内篮球场&nbsp;</p>
 	<p style="color: white">
 	  规格：26m*15m;<br>
       4片场地<br>
-      开放时间：13：00-21：00<br>
+      开放时间：<br>
+      13：00-21：00<br>
       票价：10元/人</p>
 </div>
 
-<div  id="ball" style="color: #FFCC33">
-	<b>室外足球场</b>
+<div  id="ball" style="float: none;">
+	<p style="  font-size: 1.3em">室外足球场&nbsp;</p>
 	<div style="color: white">
 	   规格：7*7 &11&11<br>
 场地各两片<br>
-开放时间：13：00-21：00<br>
+开放时间：
+<br>13：00-21：00<br>
 票价：10元/人/小时<br><br></div> 
 </div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+
 
 <br>
 <br>
-<div >
+<div>
 <p class="head"> <b>V+ FITNESS CENTER</b></p>
-<p style="color: white;">位于公司楼下一层，约200平米，配有5名私人教练6种经典课程：新手入门，美背塑胸，美腿翘臀，全身塑燃，核心紧致，超能燃脂更有瑜伽，普拉提，boxing等特色课程</p>
+<p style="color: #330099;">位于公司楼下一层，约200平米，配有5名私人教练6种经典课程：新手入门，美背塑胸，美腿翘臀，全身塑燃，核心紧致，超能燃脂更有瑜伽，普拉提，boxing等特色课程</p>
 
 <p class="head"> <b>其他周边场地信息</b></p>
 </div>
-   <div id="ball" style="color: #FFCC33" >
-	<b>室内篮球场</b>
+   <div id="ball" style="color: #FFCC33;margin-right: 33px;" >
+	<b>瑜伽馆</b>
 	<p style="color: white">
-	  规格：26m*15m;<br>
-      4片场地<br>
-      开放时间：13：00-21：00<br>
-      票价：10元/人</p>
+	  REAL瑜伽生活馆<br>
+      成山路220号<br>
+      距离新家：2.9km</p>
 </div>
 
-<div id="ball"  >
-	<b style="color: #FFCC33">室内篮球场</b>
+<div id="ball" style="float:none;" >
+	<b style="color: #FFCC33">健身房</b>
 	<p style="color: white">
-	  规格：26m*15m;<br>
-      4片场地<br>
-      开放时间：13：00-21：00<br>
-      票价：10元/人</p>
-</div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<div id="ball" " >
+	  威尔士健身会所<br>
+      徐汇中山南路699号<br>
+      距离新家：8km</p>
+
+<div id="ball"  >
 	<b style="color: #FFCC33;">篮球馆</b>
-	<hr>
+	
 	<p style="color: white">
 	  米高篮球俱乐部<br>
       下南路900号<br>
@@ -148,9 +142,9 @@
       世博大道1368号<br>
       距新家距离：4.3km</p>
 </div>
-<div id="ball1" style="color: #FFCC33; " >
+<div id="ball" style=" color: #FFCC33; float:none;" >
 	<b>羽毛球球场</b>
-	<hr style="color: #FFCC33;">
+	
 	<p style="color: white">
 	  群星职校羽毛球馆<br>
       通州路240号<br>
@@ -159,7 +153,7 @@
       浦东新区杨思路1371号<br>
       距离新家：3.2km</p>
 </div>
-	<a style="color: white" href="tel:18217633690">18217633690</a>
+	
 	<div id="sign" style="float:right">
 	<p style="color:white">Medtronic<br>
 	&nbsp;美&nbsp;敦&nbsp;力</p>
