--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	.head{font-size: 1.3em;
 	      color: #330099;}
     hr{
-    margin-top: -1px;
+    margin-top: -4px;
     margin-bottom: 5px;
     border: 0;
     border-top: 1px solid #000099;
@@ -67,7 +67,7 @@
 
 
 <p class="head"> <b>东方体育中心</b></p>
-<hr>
+<hr style="margin-top: -8px;">
 <div id="ball" " >
 	<p style="padding-bottom: 0.7px; border-bottom: 1px solid; font-size: 1.3em; ">室内游泳池&nbsp;</p>
 	<p style="color: white">规格:20m*50m<br>
