--- a/transportation.html
+++ b/transportation.html
@@ -33,10 +33,12 @@
 		margin-left: -10;
 	}
 	
-	.head{font-size: 1.3em;
+	.head{font-size: 1.4em;
 	      color: #330099;
 	      background-color: #000099; border-radius:25px;
-	      color: white;}
+	      color: white;
+	      padding-bottom: 6px;
+	      padding-top: 6px;}
     hr{
     margin-top: -4px;
     margin-bottom: 5px;
@@ -73,7 +75,7 @@
 
 <div id="ball">
 
-<p class="head" style="" ><b>&nbsp;&nbsp;公共交通服务</b></br></p>
+<p class="head"  ><b>&nbsp;&nbsp;公共交通服务</b></br></p>
 
 <p>公交车</p>
 <div style="float: left;">
