--- a/security.html
+++ b/security.html
@@ -33,8 +33,13 @@
 		margin-left: -10;
 	}
 	
-	.head{font-size: 1.3em;
-	      color: #330099;}
+	.head{font-size: 1.4em;
+	      color: #330099;
+	      background-color: #000099;
+	      border-radius:25px;
+	      color: white;
+	      padding-bottom: 6px;
+	      padding-top: 6px;}
     hr{
     margin-top: -4px;
     margin-bottom: 5px;
@@ -68,29 +73,21 @@
 </div>-->
 
 
-<p class="head" style="font-size: 1.3em;
-	      background-color: #000099; border-radius:25px;
-	      color: white;" ><b>&nbsp;&nbsp;访客管理</b></br></p>
+<p class="head" ><b>&nbsp;&nbsp;访客管理</b></br></p>
 
 
    
 
-	      <p class="head" style="font-size: 1.3em;
-	      background-color: #000099; border-radius:25px;
-	      color: white;" ><b>&nbsp;&nbsp;门禁管理</b></br></p>
+	      <p class="head"><b>&nbsp;&nbsp;门禁管理</b></br></p>
 	      
 
 
 
 
-<p class="head" style="font-size: 1.3em;
-	      background-color: #000099; border-radius:25px;
-	      color: white;" ><b>&nbsp;&nbsp;消防安全</b></br></p>
+<p class="head"><b>&nbsp;&nbsp;消防安全</b></br></p>
 
 
-<p class="head" style="font-size: 1.3em;
-	      background-color: #000099; border-radius:25px;
-	      color: white;" ><b>&nbsp;&nbsp;员工急救</b></br></p>
+<p class="head"><b>&nbsp;&nbsp;员工急救</b></br></p>
 
 	<div id="sign" style="float:right">
 	<p style="color:white">Medtronic<br>
