--- a/security.html
+++ b/security.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
 	<!--链接bootstrap-->
 <style type="text/css">
-   body{background-color: #6495ED;
+   body{background-color: #AAE0F9;
 	font-family:arial;}
    img{margin-left: 0;
        margin-right: 0;}
@@ -27,24 +27,25 @@
 	#ball{float:left;
 	color: #330099;
     margin-right: 20px;}
-
 	#ball1{
 		margin-right: -10;
 		margin-left: -10;
 	}
 	
 	.head{font-size: 1.4em;
-	      color: #330099;
-	      background-color: #000099;
-	      border-radius:25px;
-	      color: white;
-	      padding-bottom: 6px;
-	      padding-top: 6px;}
+	      color: #0C999A;
+	      width: 90px;
+	      
+	      padding-bottom: 2px;
+	      padding-top: 2px;
+	      border-bottom: 1px solid #0C999A; }
     hr{
     margin-top: -4px;
     margin-bottom: 5px;
     border: 0;
-    border-top: 1px solid #000099;
+    border-top: 2px solid #0C999A;
+    margin-left: -15px;
+    margin-right: -15px;
     }
 </style>
 	<title>安全</title>
@@ -53,9 +54,9 @@
 <div class="container-fluid">	
   <header>
     <img src="header.PNG">
-    &nbsp;&nbsp;安全<br>
+    &nbsp;&nbsp;安&nbsp;全<br>
     <hr>
-    <p>SAFETY</p>
+    <p>&nbsp;&nbsp;&nbsp;&nbsp;SAFETY</p>
    </header>
 
 
@@ -73,21 +74,21 @@
 </div>-->
 
 
-<p class="head" ><b>&nbsp;&nbsp;访客管理</b></br></p>
+<p class="head" ><b>&nbsp;访客管理</b></br></p>
 
 
    
 
-	      <p class="head"><b>&nbsp;&nbsp;门禁管理</b></br></p>
+	      <p class="head"><b>&nbsp;门禁管理</b></br></p>
 	      
 
 
 
 
-<p class="head"><b>&nbsp;&nbsp;消防安全</b></br></p>
+<p class="head"><b>&nbsp;消防安全</b></br></p>
 
 
-<p class="head"><b>&nbsp;&nbsp;员工急救</b></br></p>
+<p class="head"><b>&nbsp;员工急救</b></br></p>
 
 	<div id="sign" style="float:right">
 	<p style="color:white">Medtronic<br>
