--- a/transportation.html
+++ b/transportation.html
@@ -7,11 +7,11 @@
 	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
 	<!--链接bootstrap-->
 <style type="text/css">
-   body{background-color: #6495ED;
+   body{background-color: #5CC4E8;
 	font-family:arial;}
    img{margin-left: 0;
        margin-right: 0;}
-   header{color: #330099;
+   header{color: white;
           font-size:2em;}
        header p{
                 font-size: 0.5em;
@@ -34,16 +34,17 @@
 	}
 	
 	.head{font-size: 1.4em;
-	      color: #330099;
-	      background-color: #000099; border-radius:25px;
-	      color: white;
-	      padding-bottom: 6px;
-	      padding-top: 6px;}
+	      color: #0D9344;
+	      width: 150px;
+	      
+	      padding-bottom: 2px;
+	      padding-top: 2px;
+	      border-bottom: 1px solid #0D9344;}
     hr{
     margin-top: -4px;
     margin-bottom: 5px;
     border: 0;
-    border-top: 1px solid #000099;
+    border-top: 2px solid #0D9344;
     }
     
     .busno{
