--- a/security.html
+++ b/security.html
@@ -11,7 +11,7 @@
 	font-family:arial;}
    img{margin-left: 0;
        margin-right: 0;}
-   header{color: #330099;
+   header{color: #013D90;
           font-size:2em;}
        header p{
                 font-size: 0.5em;
@@ -91,7 +91,7 @@
 <p class="head"><b>&nbsp;员工急救</b></br></p>
 
 	<div id="sign" style="float:right">
-	<p style="color:white">Medtronic<br>
+	<p style="color:#013D90;">Medtronic<br>
 	&nbsp;美&nbsp;敦&nbsp;力</p>
 	</div>
 </div>
