--- a/transportation.html
+++ b/transportation.html
@@ -43,6 +43,8 @@
     hr{
     margin-top: -4px;
     margin-bottom: 5px;
+	    margin-left:-15px;
+	    margin-right:-15px;
     border: 0;
     border-top: 2px solid #0D9344;
     }
