--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	font-family:arial;}
    img{margin-left: 0;
        margin-right: 0;}
-   header{color: #330099;
+   header{color: white;
           font-size:2em;}
        header p{
                 font-size: 0.5em;
@@ -33,13 +33,21 @@
 		margin-left: -10;
 	}
 	
-	.head{font-size: 1.3em;
-	      color: #330099;}
+	.head{
+	      
+
+	      font-size: 1.4em;
+	      color: #C7672D;
+	      width: 90px;
+	      
+	      padding-bottom: 0px;
+	      padding-top: 2px;
+	      border-bottom: 1px solid #C7672D;}
     hr{
     margin-top: -4px;
     margin-bottom: 5px;
     border: 0;
-    border-top: 1px solid #000099;
+    border-top: 2px solid #C7672D;
     }
 </style>
 	<title>娱乐</title>
@@ -48,28 +56,14 @@
 <div class="container-fluid">	
   <header>
     <img src="header.PNG">
-    &nbsp;&nbsp;娱乐<br>
+    &nbsp;&nbsp;体育健康<br>
     <hr>
-    <p>ENTERTAINMENT</p>
+    <p>SPORTS&HEALTH</p>
    </header>
-<p class="head" style="color: green;"><b>定期举办员工俱乐部活动</b></br></p>
-   <p style="color: white;">公司将公司将资助员工俱乐部，定期举办集团活动每周安排美容
-   美发,按摩等上门服务，缓解工作压力，营造一个身心舒畅
-   的工作环境.
-   </p>
-   <p style="color: white">同时还将以公司的名义，与附近的休闲娱乐场所洽谈，为员工争取更过优惠，谋取更多便利。</p>
-
-<p class="head" style="color: #ffa500;"><b>运动补贴</b></br></p>
-
-<p class="head" style="color: #330099;"><b>每周定期的健康日</b></br></p>
-
-
-
-
-<p class="head"> <b>东方体育中心</b></p>
-<hr style="margin-top: -8px;">
-<div id="ball" " >
-	<p style="padding-bottom: 0.7px; border-bottom: 1px solid; font-size: 1.3em; ">室内游泳池&nbsp;</p>
+<p class="head" style="width: 180px;"><b>公司附近的健身设施</b></br></p>
+   <p style="color:#013D90;"> 东方体育中心：上海东方体育中心（Oriental Sports Center），被称为“海上王冠”，拥有游泳池、篮球场、羽毛球场、足球场等丰富的运动休闲场馆，是上海标志性的大型体育场所。</p>
+<div id="ball"  >
+	<p style="padding-bottom: 0.7px; border-bottom: 1px solid; font-size: 1.2em; ">室内游泳池&nbsp;</p>
 	<p style="color: white">规格:20m*50m<br>
 	   一片场地<br>开发时间：全年<br>
 	   9：00-21：00<br>
@@ -77,7 +71,7 @@
 </div>
 
 <div  id="ball" style="float: none; " >
-	<p style="padding-bottom: 1.7px;  font-size: 1.3em">室内羽毛球场&nbsp;</p>
+	<p style="padding-bottom: 1.7px;  font-size: 1.2em">室内羽毛球场&nbsp;</p>
 	<p style="color: white">规格:15m*7.1m<br>
 	   10片场地<br>
 	   开发时间：<br>9：00-22：00<br>
@@ -87,7 +81,7 @@
 
 
 <div   id="ball"  >
-	<p style=" font-size: 1.3em; padding-bottom: 0.7px; border-bottom: 1px solid ;">室内篮球场&nbsp;</p>
+	<p style=" font-size: 1.2em; padding-bottom: 0.7px; border-bottom: 1px solid ;">室内篮球场&nbsp;</p>
 	<p style="color: white">
 	  规格：26m*15m;<br>
       4片场地<br>
@@ -97,7 +91,7 @@
 </div>
 
 <div  id="ball" style="float: none;">
-	<p style="  font-size: 1.3em">室外足球场&nbsp;</p>
+	<p style="  font-size: 1.2em">室外足球场&nbsp;</p>
 	<div style="color: white">
 	   规格：7*7 &11&11<br>
 场地各两片<br>
@@ -107,15 +101,8 @@
 </div>
 
 
-<br>
-<br>
-<div>
-<p class="head"> <b>V+ FITNESS CENTER</b></p>
-<p style="color: #330099;">位于公司楼下一层，约200平米，配有5名私人教练6种经典课程：新手入门，美背塑胸，美腿翘臀，全身塑燃，核心紧致，超能燃脂更有瑜伽，普拉提，boxing等特色课程</p>
-
-<p class="head"> <b>其他周边场地信息</b></p>
-</div>
-   <div id="ball" style="color: #FFCC33;margin-right: 33px;" >
+<p class="head" style="width:130px;"><b>周边健身场馆</b></br></p>
+<div id="ball" style="color: #013D90;;margin-right: 33px;" >
 	<b>瑜伽馆</b>
 	<p style="color: white">
 	  REAL瑜伽生活馆<br>
@@ -124,14 +111,14 @@
 </div>
 
 <div id="ball" style="float:none;" >
-	<b style="color: #FFCC33">健身房</b>
+	<b style="color: #013D90;">健身房</b>
 	<p style="color: white">
 	  威尔士健身会所<br>
       徐汇中山南路699号<br>
       距离新家：8km</p>
 
 <div id="ball"  >
-	<b style="color: #FFCC33;">篮球馆</b>
+	<b style="color: #013D90;">篮球馆</b>
 	
 	<p style="color: white">
 	  米高篮球俱乐部<br>
@@ -142,7 +129,7 @@
       世博大道1368号<br>
       距新家距离：4.3km</p>
 </div>
-<div id="ball" style=" color: #FFCC33; float:none;" >
+<div id="ball" style=" color: #013D90; float:none;" >
 	<b>羽毛球球场</b>
 	
 	<p style="color: white">
@@ -153,9 +140,24 @@
       浦东新区杨思路1371号<br>
       距离新家：3.2km</p>
 </div>
+<p class="head" style="width:120px;" ><b>员工俱乐部</b></br></p>
+
+
+
+
+
+
+<br>
+<br>
+<div>
+<p class="head"> <b>V+ FITNESS CENTER</b></p>
+<p style="color: #330099;">位于公司楼下一层，约200平米，配有5名私人教练6种经典课程：新手入门，美背塑胸，美腿翘臀，全身塑燃，核心紧致，超能燃脂更有瑜伽，普拉提，boxing等特色课程</p>
+
+
+   
 	
 	<div id="sign" style="float:right">
-	<p style="color:white">Medtronic<br>
+	<p style="color:#013D90;">Medtronic<br>
 	&nbsp;美&nbsp;敦&nbsp;力</p>
 	</div>
 </div>
