--- a/zixun.html
+++ b/zixun.html
@@ -48,6 +48,7 @@
     margin-left: -15px;
     margin-right: -15px;
     }
+    a{color: white;}
 </style>
 	<title>基本资讯</title>
 </head>
@@ -69,12 +70,13 @@
 <p class="head" style="width:135px;"><b>&nbsp;&nbsp;大楼保安中心</b></br></p>
 <p class="head" style="width:170px;"><b>&nbsp;&nbsp;公司快递收发须知</b><br></p>
 <p class="head" style="width:160px;" ><b>&nbsp;&nbsp;公司IT咨询须知</b></br></p>
-
-	<a style="color: white" href="tel:4008219811">IT咨询热线：4008219811</a>
-	<br>
-	<a style="color: white" href="tel:20067000760">ASKHR:4006700076</a>
-	<br>
-	<a style="color: white" href="tel:4008803588">SSS:4008803588</a><br>
+<p style="color:white;">IT咨询热线：
+	<a href="tel:4008219811">4008219811</a>
+	<br>ASKHR:
+	<a href="tel:20067000760">4006700076</a>
+	<br>SSS:
+	<a  href="tel:4008803588">4008803588</a><br>
+	</p>
 
 
 	<div id="sign" style="float:right">
