--- a/eat.html
+++ b/eat.html
@@ -64,7 +64,7 @@
 <body >
 <div class="container-fluid">	
   <header>
-    <img style="width: 45px; height: 60px;" src="1.PNG">
+    <img style="width: 45px; height: 60px;" src="1.png">
     &nbsp;&nbsp;餐饮<br>
     <hr>
     <p>CATERING</p>
@@ -85,9 +85,9 @@
 </div>-->
 
 
-<img class="pic" src="2.PNG">
+<img class="pic" src="2.png">
 <p class="head" ><b>&nbsp;园区餐厅</b></br></p>
-	   <img class="pic" src="3.PNG">   <p class="head" style="width: 162px;"><b>&nbsp;园区附近餐厅</b></br></p>
+	   <img class="pic" src="3.png">   <p class="head" style="width: 162px;"><b>&nbsp;园区附近餐厅</b></br></p>
 	      
 <div id="ball" " >
 	<p style="padding-bottom: 1.7px;  font-size: 1.3em; ">小杨生煎&nbsp;</p>
@@ -104,11 +104,11 @@
 	<br>距离公司：765M<br>
 	   </p>
 </div>
-<img class="pic" src="4.PNG">
+<img class="pic" src="4.png">
 <p class="head" style="width: 162px;"><b>&nbsp;园区食堂介绍</b></br></p>
-<img class="pic" src="5.PNG">
+<img class="pic" src="5.png">
 <p class="head" style="width: 197px;"><b>&nbsp;索迪斯卡（TBD）</b></br></p>
-<img style="float: right;" src="6.PNG">
+<img style="float: right;" src="6.png">
 	
 	<div id="sign" style="float:right;">
 	<p style="color:#013D90; width: 60px;">Medtronic<br>
