--- a/transportation.html
+++ b/transportation.html
@@ -35,18 +35,18 @@
 	
 	.head{font-size: 1.4em;
 	      color: #0D9344;
-	      width: 135px;
-	      
+	      width: 165px;
+	      float: none;
 	      padding-bottom: 2px;
 	      padding-top: 2px;
 	      border-bottom: 1px solid #0D9344;}
     hr{
     margin-top: -4px;
     margin-bottom: 5px;
-	    margin-left:-15px;
-	    margin-right:-15px;
     border: 0;
     border-top: 2px solid #0D9344;
+    margin-left: -15px;
+    margin-right: -15px;
     }
     
     .busno{
@@ -63,13 +63,18 @@
      color: #013D90;}
     .destidetail{color:white; margin-top: -6px;}
     }
+    .pic{
+    	width: 32px; 
+    	height: 32px;
+    	float: left;
+    }
 </style>
 	<title>交通</title>
 </head>
 <body >
 <div class="container-fluid">	
   <header>
-    <img src="header.PNG">
+    <img style="width: 50px; height: 60px;" src="10.PNG">
     &nbsp;&nbsp;交&nbsp;&nbsp;通<br>
     <hr>
     <p>TRANSPORTATION</p>
@@ -79,11 +84,14 @@
 
 
 
+
+<img class="pic" style="width: 32px; 
+    	height: 32px;
+    	float: left;" src="11.PNG">
+<p class="head"  ><b>&nbsp;&nbsp;公共交通服务</b></br></p>
 <div id="ball">
 
-<p class="head"  ><b>&nbsp;&nbsp;公共交通服务</b></br></p>
-
-<p style="font-size:1.2em;"><b>公交车</b></p>
+<p style="font-size:1.2em;"><b><img src="16.png" style="width: 20px; height: 20px;">&nbsp;公交车</b></p>
 <div style="float: left;">
 	<p  class="busno">
 	&nbsp;84路&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;首/末班车时刻
@@ -104,7 +112,7 @@
 	</p>
 
 
-<p style="font-size:1.2em;"><b>东方体育中心站</b></p>
+<p style="font-size:1.2em;"><img src="14.png" style="width: 20px; height: 20px;"><b>&nbsp;东方体育中心站</b></p>
 
 
     <p class="busno" style="background-color:#B72664;">&nbsp;6号线&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;首/末班车时刻
@@ -135,9 +143,13 @@
 	<p class="busdetail">
 	往嘉定北&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;05:53-22:18
 	</p>
- 
+ <img class="pic" style="width: 32px; 
+    	height: 32px;
+    	float: left;" src="13.PNG">
 <p class="head" ><b>&nbsp;&nbsp;共享班车服务</b></br></p>
-<p class="head" style="width: 95px;"><b>&nbsp;&nbsp;停车服务</b></br></p></div>
+<img class="pic" style="width: 32px; 
+    	height: 32px;
+    	float: left;" src="12.PNG"><p class="head" style="width: 127px;"><b>&nbsp;&nbsp;停车服务</b></br></p></div>
 </div>
 </div>
 
@@ -158,18 +170,19 @@ MIC（Medtronic Innovation Center），美敦力临床培训中心
 <br>
 上海漕河泾开发区田州路99号柯惠大楼2、5楼
 </p>
-<p class="destidetail">公共交通：11号线转9号线，共8站，用时约51分钟
-<br>驾车：约13.7公里，用时约30分钟</p>
+<p class="destidetail"><img src="14.png" style="width: 15px; height: 15px;">公共交通：11号线转9号线，共8站，用时约51分钟
+<br>
+<img src="15.png" style="width: 15px; height: 15px;">驾车：约13.7公里，用时约30分钟</p>
  
 <p class="destination">
 MTC （Medtronic Technology Center），美敦力科技中心
 <br>上海市闵行区陈行路2388号3号楼6楼</p>
-<p class="destidetail">公共交通：8号线，共三站，用时约20分钟
-<br>驾车：约8.2公里，用时约20分钟</p>
+<p class="destidetail"><img src="14.png" style="width: 15px; height: 15px;">公共交通：8号线，共三站，用时约20分钟
+<br><img src="15.png" style="width: 15px; height: 15px;">驾车：约8.2公里，用时约20分钟</p>
  
 <p class="destination">柯惠医疗器材制造（上海）有限公司</br>
 上海市闵行区漕河泾出口加工区浦星路789号10号楼</p>
-<p class="destidetail">驾车：约7公里，用时约20分钟</p>
+<p class="destidetail"><img src="14.png" style="width: 15px; height: 15px;">驾车：约7公里，用时约20分钟</p>
 
 </div>
 
