--- a/transportation.html
+++ b/transportation.html
@@ -74,7 +74,7 @@
 <body >
 <div class="container-fluid">	
   <header>
-    <img style="width: 50px; height: 60px;" src="10.PNG">
+    <img style="width: 50px; height: 60px;" src="10.png">
     &nbsp;&nbsp;交&nbsp;&nbsp;通<br>
     <hr>
     <p>TRANSPORTATION</p>
@@ -87,7 +87,7 @@
 
 <img class="pic" style="width: 32px; 
     	height: 32px;
-    	float: left;" src="11.PNG">
+    	float: left;" src="11.png">
 <p class="head"  ><b>&nbsp;&nbsp;公共交通服务</b></br></p>
 <div id="ball">
 
