--- a/transportation.html
+++ b/transportation.html
@@ -145,11 +145,11 @@
 	</p>
  <img class="pic" style="width: 32px; 
     	height: 32px;
-    	float: left;" src="13.PNG">
+    	float: left;" src="13.png">
 <p class="head" ><b>&nbsp;&nbsp;共享班车服务</b></br></p>
 <img class="pic" style="width: 32px; 
     	height: 32px;
-    	float: left;" src="12.PNG"><p class="head" style="width: 127px;"><b>&nbsp;&nbsp;停车服务</b></br></p></div>
+    	float: left;" src="12.png"><p class="head" style="width: 127px;"><b>&nbsp;&nbsp;停车服务</b></br></p></div>
 </div>
 </div>
 
