--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 	      font-size: 1.4em;
 	      color: #C7672D;
-	      width: 90px;
+	      width: 122px;
 	      
 	      padding-bottom: 0px;
 	      padding-top: 2px;
@@ -48,19 +48,24 @@
     margin-bottom: 5px;
     border: 0;
     border-top: 2px solid #C7672D;
+    margin-left: -15px;
+    margin-right: -15px;
     }
 </style>
-	<title>娱乐</title>
+	<title>体育健康</title>
 </head>
 <body >
 <div class="container-fluid">	
   <header>
-    <img src="header.PNG">
+    <img style="width: 50px; height: 60px;" src="26 (4).png">
     &nbsp;&nbsp;体育健康<br>
     <hr>
     <p>SPORTS&HEALTH</p>
    </header>
-<p class="head" style="width: 180px;"><b>公司附近的健身设施</b></br></p>
+
+<p class="head" style="width: 212px;"><img class="pic" style="width: 32px; 
+    	height: 32px;
+    	float: left;" src="26 (3).png"><b>公司附近的健身设施</b></br></p>
    <p style="color:#013D90;"> 东方体育中心：上海东方体育中心（Oriental Sports Center），被称为“海上王冠”，拥有游泳池、篮球场、羽毛球场、足球场等丰富的运动休闲场馆，是上海标志性的大型体育场所。</p>
 <div id="ball"  >
 	<p style="padding-bottom: 0.7px; border-bottom: 1px solid; font-size: 1.2em; ">室内游泳池&nbsp;</p>
@@ -101,7 +106,9 @@
 </div>
 
 
-<p class="head" style="width:130px;"><b>周边健身场馆</b></br></p>
+<p class="head" style="width:157px;"><img class="pic" style="width: 32px; 
+    	height: 32px;
+    	float: left;" src="26 (2).png"><b>周边健身场馆</b></br></p>
 <div id="ball" style="color: #013D90;;margin-right: 33px;" >
 	<b>瑜伽馆</b>
 	<p style="color: white">
@@ -140,7 +147,9 @@
       浦东新区杨思路1371号<br>
       距离新家：3.2km</p>
 </div>
-<p class="head" style="width:120px;" ><b>员工俱乐部</b></br></p>
+<p class="head" style="width:142px;" ><img class="pic" style="width: 32px; 
+    	height: 32px;
+    	float: left;" src="26 (1).png"><b>员工俱乐部</b></br></p>
 
 
 
@@ -156,8 +165,10 @@
 
    
 	
-	<div id="sign" style="float:right">
-	<p style="color:#013D90;">Medtronic<br>
+	
+	<img style="float: right; " src="32.PNG">
+	<div style="float: right; clear: right;">
+	<p style="color:#013D90; ">Medtronic<br>
 	&nbsp;美&nbsp;敦&nbsp;力</p>
 	</div>
 </div>
