--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
    
 	
 	
-	<img style="float: right; " src="32.PNG">
+	<img style="float: right; " src="32.png">
 	<div style="float: right; clear: right;">
 	<p style="color:#013D90; ">Medtronic<br>
 	&nbsp;美&nbsp;敦&nbsp;力</p>
